# hatman-game

./: .cppcheck  .gitignore  CMakeLists.txt  CONFIG.json  README.md  actions.sh  changelog.md
Hatman/: audio.h  background.h  camera.cpp  camera.h  changelog.txt  collection.hpp  color.hpp  controls.cpp  controls.h  ct_math.hpp  debug_tools.hpp  emit.cpp  emit.h  entity_base.cpp  entity_base.h  entity_type_m.cpp  entity_type_m.h  entity_type_s.cpp  entity_type_s.h  entity_unique_m.cpp  entity_unique_m.h  entity_unique_s.cpp  entity_unique_s.h  flags.h  game.cpp  game.h  geometry_utils.cpp  geometry_utils.h  globalconsts.hpp  graphics.cpp  graphics.h  gui.cpp  gui.h  hide_console.cpp  input.cpp  input.h  inventory.cpp  inventory.h  item_base.cpp  item_base.h  (+35 more)
bash/: variables.sh
content/levels/: cult_headquarters.json  deeper_realm.json  descent.json  desolation.json  devouring_dephs.json  floating_isles.json  lair_of_shadows.json  library.json  mountainside_fortress.json  plains.json  the_great_bridge.json  treasury.json
content/textures/backgrounds/: devouring_dark.ase
content/textures/entities/[destructible]{orb_of_betrayal}/: default.json  explosion.ase  explosion.json  sprite.ase
content/textures/entities/[enemy]{boss_mage_phase_1}/: default.ase  default.json
content/textures/entities/[enemy]{boss_mage_phase_2}/: default.ase  default.json
content/textures/entities/[enemy]{boss_mage_phase_3}/: default.ase  default.json
content/textures/entities/[enemy]{cultist_mage}/: attack.ase  attack.json  attack_recover.json  attack_windup.json  default.ase  default.json
content/textures/entities/[enemy]{devourer}/: default.ase  default.json  move.ase  move.json
content/textures/entities/[enemy]{golem}/: default.ase  default.json  move.ase  move.json
content/textures/entities/[enemy]{hellhound}/: default [NO LOOPBACK].ase  default.ase  default.json  jump.ase  jump.json  run.ase  run.json  walk.ase  walk.json
content/textures/entities/[enemy]{necromancer}/: death.ase  death.json  default.ase  default.json
content/textures/entities/[enemy]{pygmy_warrior}/: attack.ase  attack.json  attack_recover.json  attack_windup.json  death.ase  death.json  default.ase  default.json  move.ase  move.json
content/textures/entities/[enemy]{skeleton_halberd}/: attack.ase  attack_recover.json  attack_windup.json  death.ase  death.json  default.ase  default.json  move.ase  move.json
content/textures/entities/[enemy]{sludge}/: default.ase  default.json
content/textures/gui/: boss_healthbar.ase  main_menu_background.ase  player_charge.ase  player_fire_ult_icon.ase  player_healthbar.ase  player_portrait.ase
content/textures/items/: bone_mask.ase  eldritch_battery.ase  magic_negator.ase  power_shard.ase  spider_signet.ase  twin_souls.ase  watching_eye.ase
content/tilesets/: [entityset]_enemies_shadow.json  [entityset]_items.json  interactives.json  save_orb.json  shadow_basic.json
hatman/include/: color.hpp  controls.h  debug_tools.hpp  game.h  geometry_utils.h  gui.h  hide_console.h  level.h  player.h  saver.h  script.h  sprite.h  stats.h  tags.h  tile_unique.h  vector2.hpp
hatman/include/entity/: base.h  player.h  type_m.h  type_s.h  unique_m.h  unique_s.h
hatman/include/graphics/: camera.h  graphics.h  gui.h
hatman/include/modules/: inventory.h  solid.h  sound.h  sprite.h  stats.h
hatman/include/objects/: item_base.h  item_unique.h  script.h  tile_base.h  tile_unique.h
hatman/include/systems/: audio.h  emit.h  game.h  input.h  level.h  saver.h
hatman/include/utility/: cx_math.hpp  debug_tools.hpp  filepaths.hpp  geometry.h  globalconsts.hpp  tags.h  vector2.hpp
hatman/source/: audio.cpp  controls.cpp  entity_type_m.cpp  entity_unique_m.cpp  flags.cpp  game.cpp  graphics.cpp  gui.cpp  hide_console.cpp  inventory.cpp  item_unique.cpp  level.cpp  main.cpp  player.cpp  saver.cpp  script.cpp  solid.cpp  sprite.cpp  stats.cpp
hatman/source/entity/: base.cpp  player.cpp  type_m.cpp  type_s.cpp  unique_m.cpp  unique_s.cpp
hatman/source/graphics/: camera.cpp  graphics.cpp  gui.cpp
hatman/source/modules/: inventory.cpp  solid.cpp  sound.cpp  sprite.cpp  stats.cpp
hatman/source/objects/: item_base.cpp  item_unique.cpp  script.cpp  tile_base.cpp  tile_unique.cpp
hatman/source/systems/: audio.cpp  controls.cpp  emit.cpp  flags.cpp  game.cpp  input.cpp  level.cpp  saver.cpp  timer.cpp
hatman/source/utility/: geometry.cpp  launch_info.cpp  tags.cpp
(+32 files in other folders)
